mdadm (3.0.3-2) unstable; urgency=low

  * Bumped Standards-Version to 3.8.3 without having to make changes.
  * Fixed init dependencies of mdadm daemon init.d script; thanks Petter
    Reinholdtsen (closes: #541396).

 -- martin f. krafft <madduck@debian.org>  Wed, 28 Oct 2009 08:34:43 +0100

mdadm (3.0.3-1) unstable; urgency=low

  * New upstream release.
  * Acknowledge 3.0-3.1 NMU by Christian Kujau (patch by Marco d'Itri)
    (closes: #541884), and add util-linux dependency.
  * Copy udev rules into initramfs, which udev stopped doing
    (closes: #549535, #549083, #538843, #538143).
  * Fix the bug script to write debug information to the correct file
    descriptor (closes: #537734).
  * Switch to TopGit and split Debian diff into topic branches; add
    README.source.
  * Drop the outdated rootraiddoc.97.html document.

 -- martin f. krafft <madduck@debian.org>  Tue, 27 Oct 2009 18:06:13 +0100

mdadm (3.0-3.1) unstable; urgency=medium

  * Non-maintainer upload.
  * use blkid instead of vold_id in udev-md-raid.rules (closes: #541884)

 -- christian kujau <lists@nerdbynature.de>  Mon, 14 Sep 2009 10:15:21 +0200

mdadm (3.0-2) unstable; urgency=low

  * Fixed initramfs script with patch from Steffen Hau: it was still using
    --auto-update-homehost, which has been removed and replaced by a better
     heuristic: arrays created for a different "homehost" will now be
     assembled read-only, rather than shoehorned into the system with
     --auto-update-homehost (closes: #537820).
  * Add version stamps to bugscript and mkconf scripts to facilitate
    debugging.

 -- martin f. krafft <madduck@debian.org>  Tue, 21 Jul 2009 10:33:30 +0200

mdadm (3.0-1) unstable; urgency=low

  * New stable upstream release.
  * Add information about udev and device links in /dev to bugscript output.
  * Add pointer to FAQ and in particular rootdelay to the bug script
    pre-subject file, which is displayed by tools like reportbug and thus